--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,25 @@
     "dev": "nodemon server.js",
     "sync": "node scripts/syncStudents.js"
   },
-  "keywords": ["express", "esp32", "asistencia", "unicordoba", "mongodb"],
+  "keywords": [
+    "express",
+    "esp32",
+    "asistencia",
+    "unicordoba",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "mongoose": "^8.0.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
-    "csv-parser": "^3.0.0"
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
