--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,24 @@
+# ============================================
+# Variables de Entorno - Backend
+# ============================================
+
+# Puerto del servidor
 PORT=3000
-SERVER_URL=http://localhost:3000
-MONGODB_URI=mongodb://localhost:27017/asistencia_unicordoba
-JWT_SECRET=tu_secreto_jwt_super_seguro_cambialo
-NODE_ENV=development
+
+# Entorno (development/production)
+NODE_ENV=production
+
+# URL del servidor (cambiar en producción)
+# Desarrollo: http://localhost:3000
+# Producción: https://asistencia-unicor-api.bambai.tech
+SERVER_URL=https://asistencia-unicor-api.bambai.tech
+
+# Base de datos MongoDB
+# Desarrollo local: mongodb://localhost:27017/asistencia_unicordoba
+# Docker: mongodb://mongodb:27017/asistencia_unicordoba
+# MongoDB Atlas: mongodb+srv://user:pass@cluster.mongodb.net/asistencia_unicordoba
+MONGODB_URI=mongodb://mongodb:27017/asistencia_unicordoba
+
+# JWT Secret - CAMBIAR EN PRODUCCIÓN
+# Genera uno seguro con: openssl rand -base64 64
+JWT_SECRET=GENERA_UN_SECRETO_ALEATORIO_LARGO_Y_SEGURO_AQUI
