--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,9 @@
-VITE_API_URL=http://localhost:3000/api
+# ============================================
+# Variables de Entorno - Frontend
+# ============================================
+
+# URL de la API Backend
+# Desarrollo local: http://localhost:3000/api
+# Desarrollo Docker: http://localhost:3100/api
+# Producción: https://asistencia-unicor-api.bambai.tech/api
+VITE_API_URL=https://asistencia-unicor-api.bambai.tech/api
