--- a/client/package.json
+++ b/client/package.json
@@ -4,29 +4,31 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
     "@mantine/core": "^7.3.0",
-    "@mantine/hooks": "^7.3.0",
-    "@mantine/notifications": "^7.3.0",
     "@mantine/dates": "^7.3.0",
     "@mantine/dropzone": "^7.3.0",
-    "@mantine/modals": "^7.3.0",
     "@mantine/form": "^7.3.0",
+    "@mantine/hooks": "^7.3.0",
+    "@mantine/modals": "^7.3.0",
+    "@mantine/notifications": "^7.3.0",
     "@tabler/icons-react": "^2.44.0",
     "axios": "^1.6.2",
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "html5-qrcode": "^2.3.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-mkcert": "^1.17.9"
   }
 }
